community-network.gather_playsession.e720e644a1bb04bae42f717f7c3fad2ea1d1cf4a
Running as unit: run-p1705207-i14285315.scope; invocation ID: dd950c6ac6a74bbca74333d937be6ce0
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.13
   Compiling libc v0.2.159
    Checking cfg-if v1.0.0
   Compiling autocfg v1.4.0
   Compiling version_check v0.9.5
    Checking itoa v1.0.11
    Checking bytes v1.7.2
    Checking pin-project-lite v0.2.14
    Checking fnv v1.0.7
   Compiling parking_lot_core v0.9.10
    Checking smallvec v1.13.2
    Checking scopeguard v1.2.0
   Compiling lock_api v0.4.12
    Checking futures-core v0.3.30
   Compiling shlex v1.3.0
   Compiling slab v0.4.9
    Checking futures-sink v0.3.30
   Compiling cc v1.1.22
    Checking log v0.4.22
    Checking once_cell v1.19.0
    Checking getrandom v0.2.15
   Compiling quote v1.0.37
    Checking mio v1.0.2
    Checking socket2 v0.5.7
   Compiling syn v2.0.79
    Checking parking_lot v0.12.3
    Checking signal-hook-registry v1.4.2
   Compiling typenum v1.17.0
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.30
   Compiling httparse v1.9.4
    Checking futures-util v0.3.30
   Compiling generic-array v0.14.7
    Checking rustls-pki-types v1.9.0
    Checking spin v0.9.8
    Checking byteorder v1.5.0
    Checking http v1.1.0
   Compiling ring v0.17.8
    Checking memchr v2.7.4
   Compiling serde v1.0.210
    Checking untrusted v0.9.0
    Checking tinyvec_macros v0.1.1
    Checking tracing-core v0.1.32
    Checking tinyvec v1.8.0
    Checking http v0.2.12
   Compiling unicase v2.7.0
    Checking subtle v2.6.1
    Checking equivalent v1.0.1
    Checking zeroize v1.8.1
    Checking hashbrown v0.14.5
    Checking percent-encoding v2.3.1
    Checking try-lock v0.2.5
    Checking form_urlencoded v1.2.1
    Checking want v0.3.1
    Checking unicode-normalization v0.1.24
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking tracing v0.1.40
    Checking rand_core v0.6.4
    Checking futures-channel v0.3.30
   Compiling num-traits v0.2.19
    Checking indexmap v2.5.0
   Compiling thiserror v1.0.64
   Compiling ident_case v1.0.1
   Compiling strsim v0.11.1
    Checking unicode-bidi v0.3.15
    Checking digest v0.10.7
    Checking http-body v1.0.1
    Checking tower-service v0.3.3
    Checking cpufeatures v0.2.14
    Checking idna v0.5.0
    Checking ryu v1.0.18
   Compiling serde_json v1.0.128
    Checking mime v0.3.17
   Compiling rustls v0.23.13
    Checking sha1 v0.10.6
   Compiling rustls v0.22.4
    Checking url v2.5.2
    Checking iana-time-zone v0.1.61
   Compiling radium v0.7.0
   Compiling mime_guess v2.0.5
    Checking aho-corasick v1.1.3
    Checking chrono v0.4.38
   Compiling multer v2.1.0
   Compiling ahash v0.8.11
    Checking utf-8 v0.7.6
    Checking tap v1.0.1
   Compiling heck v0.5.0
   Compiling time-core v0.1.2
   Compiling either v1.13.0
    Checking data-encoding v2.6.0
   Compiling darling_core v0.20.10
   Compiling num-conv v0.1.0
   Compiling pq-sys v0.6.3
    Checking powerfmt v0.2.0
    Checking base64 v0.22.1
    Checking regex-syntax v0.8.4
    Checking httpdate v1.0.3
    Checking rustls-pemfile v2.1.3
    Checking deranged v0.3.11
   Compiling time-macros v0.2.18
   Compiling diesel_table_macro_syntax v0.2.0
    Checking wyz v0.5.1
    Checking rustls-webpki v0.102.8
    Checking headers-core v0.2.0
    Checking http-body v0.4.6
   Compiling tokio-macros v2.4.0
   Compiling zerocopy-derive v0.7.35
   Compiling serde_derive v1.0.210
    Checking tokio v1.40.0
    Checking zerocopy v0.7.35
   Compiling thiserror-impl v1.0.64
    Checking ppv-lite86 v0.2.20
   Compiling darling_macro v0.20.10
    Checking rand_chacha v0.3.1
    Checking rand v0.8.5
   Compiling darling v0.20.10
   Compiling dsl_auto_type v0.1.2
    Checking regex-automata v0.4.7
   Compiling pin-project-internal v1.1.5
    Checking tungstenite v0.21.0
    Checking webpki-roots v0.26.6
    Checking encoding_rs v0.8.34
    Checking funty v2.0.0
    Checking base64 v0.21.7
    Checking pin-project v1.1.5
    Checking time v0.3.36
    Checking headers v0.3.9
    Checking bitvec v1.0.1
    Checking regex v1.10.6
   Compiling diesel_derives v2.2.3
    Checking http-body-util v0.1.2
    Checking sync_wrapper v1.0.1
    Checking nu-ansi-term v0.50.1
    Checking scoped-tls v1.0.1
    Checking tokio-util v0.7.12
    Checking hyper v1.4.1
    Checking tokio-rustls v0.26.0
    Checking tokio-tungstenite v0.21.0
    Checking h2 v0.3.26
    Checking tokio-rustls v0.25.0
    Checking hyper-util v0.1.9
    Checking base64 v0.13.1
    Checking ipnet v2.10.0
    Checking glob v0.3.1
    Checking hex v0.4.3
    Checking serde_urlencoded v0.7.1
    Checking uuid v1.10.0
    Checking serde_bytes v0.11.15
    Checking bitflags v2.6.0
    Checking flexi_logger v0.29.0
    Checking dotenvy v0.15.7
    Checking hyper-rustls v0.27.3
    Checking bson v2.13.0
    Checking reqwest v0.12.7
    Checking diesel v2.2.4
    Checking hyper v0.14.30
    Checking warp v0.3.7
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.4/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
